After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705672 - Inconsistent deprecations. GtkComboBox and GtkMenu.
Inconsistent deprecations. GtkComboBox and GtkMenu.
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkComboBox
3.9.x
Other All
: Normal minor
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-08-08 13:48 UTC by Kjell Ahlstedt
Modified: 2013-08-13 22:10 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Kjell Ahlstedt 2013-08-08 13:48:05 UTC
Commit https://git.gnome.org/browse/gtk+/commit/?id=6f7b0cac94c2c12d192f3945ef5befeb2949ea51
deprecates some functions in gtkcombobox.c and gtkmenu.c, but there are no
corresponding GDK_DEPRECATED_IN_3_10 in gtkcombobox.h and gtkmenu.h.
The deprecated properties tearoff-title and tearoff-state in gtkmenu.c don't
have the flag G_PARAM_DEPRECATED.

It would be nice with a short comment after "Deprecated: 3.10" explaining
why a property or a function is deprecated or recommending a replacement.


Although it's slightly off-topic here, I'd also like to call attention to
bug 665315 comment 2, concerning the deprecation of GtkUIManager, GtkAction and
GtkActionGroup.
Comment 1 Kjell Ahlstedt 2013-08-08 13:51:26 UTC
CC-ing William Jon McCann, who made the commit.