Add some missing deprecation annotations

These were reported missing in bug
https://bugzilla.gnome.org/show_bug.cgi?id=705672